--- a/dank_tank.cfg
+++ b/dank_tank.cfg
@@ -1,4 +1,4 @@
-DATABASE = 'tmp/dank.db'
+DATABASE = 'dank.db'
 DEBUG = True
 UPLOAD_FOLDER = './static/uploads'
 ALLOWED_EXTENSIONS = set(['png', 'jpg', 'jpeg', 'gif'])
