Added registration backend

--- a/dank_tank.cfg
+++ b/dank_tank.cfg
@@ -1,6 +1,5 @@
 DATABASE = 'dank.db'
 DEBUG = True
-UPLOAD_FOLDER = './static/uploads'
-ALLOWED_EXTENSIONS = set(['png', 'jpg', 'jpeg', 'gif'])
+SECRET_KEY = 'keepitsecretkeepitsafe'
 SQLALCHEMY_DATABASE_URI = 'sqlite:///' + DATABASE
 SQLALCHEMY_TRACK_MODIFICATIONS = False
